# stabiliplus

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  README.md  package.xml  postprocess.py  stabiliplus_doxyfile  timing_postprocess.py
figures/: new_timing_robot2_16sidefric_4acc.eps  timing_robot2_16sidefric_4acc.eps  timing_robot3_16sidefric.eps  timing_robot3_4sidefric.eps
include/: contactPoints.h  edge.h  experimenter.h  face.h  outeredge.h  outerface.h  outervertex.h  robot.h  stability_polytope.h  vertex.h
include/contactSet/: contactPoints.h  contactSet.h
include/polytope/: constrainedEquilibriumPolytope.h  edge.h  face.h  outeredge.h  outerface.h  outervertex.h  robustStabilityPolytope.h  stabilityPolytope.h  staticPoint.h  staticStabilityPolytope.h  vertex.h
include/problemDescriptor/: contactPoints.h  contactSet.h  problemDescriptor.h
include/stabiliplus/: contactPoints.h  contactSet.h  edge.h  experimenter.h  outeredge.h  robustStabilityPolytope.h  stabilityPolytope.h  stability_polytope.h  staticPoint.h  staticStabilityPolytope.h
include/wrapper/: glpk_wrapper.h  gurobi_wrapper.h  lpsolve_wrapper.h  solver_wrapper.h
includes/: edge.h  face.h
msg/: contact.msg  contactSet.msg  plane.msg  polytope.msg
python/: README.md  polytope.py  requirements.txt  robot_description.py  robust_stability.py  static_stability.py  utils.py
robots/: proto2_pushUp.xml  robot_1.xml  robot_2.xml  robot_3.xml  robot_4.xml  robot_8.xml
src/: #staticStabilityPolytope.cpp#  .#staticStabilityPolytope.cpp  CoMQP.cpp  CoMQP.h  Makefile  PointProjector.cpp  PointProjector.h  contactPoints.cpp  contactSet.cpp  edge.cpp  experimenter.cpp  experimenter.h  face.cpp  main  main.cpp  outeredge.cpp  outerface.cpp  outervertex.cpp  robot.cpp  robustStabilityPolytope.cpp  stabiliplus_node.cpp  stabilityPolytope.cpp  stability_polytope.cpp  staticPoint.cpp  staticStabilityPolytope.cpp  vertex.cpp  vertices.txt
src/contactSet/: contactPoints.cpp  contactSet.cpp
src/polytope/: constrainedEquilibriumPolytope.cpp  edge.cpp  face.cpp  outeredge.cpp  outerface.cpp  outervertex.cpp  robustStabilityPolytope.cpp  stabilityPolytope.cpp  staticPoint.cpp  staticStabilityPolytope.cpp  vertex.cpp
src/problemDescriptor/: contactPoints.cpp  contactSet.cpp  problemDescriptor.cpp
src/wrapper/: glpk_wrapper.cpp  gurobi_wrapper.cpp  lpsolve_wrapper.cpp  solver_wrapper.cpp
