<?xml version="1.0"?>
<package format="2">
  <name>stabiliplus</name>
  <version>0.0.0</version>
  <description>The stabiliplus package</description>

  <maintainer email="julien@todo.todo">julien</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
